Separate logic of uploading service

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp"
-    tools:context=".screen.main.MainActivity"
+    tools:context=".presentation.screen.main.MainActivity"
     android:background="@color/primaryLightColor">
 
     <TextView
